--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ input:-webkit-autofill {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* animation: right-left 600ms; */
+    animation: right-left 600ms;
 }
 
 /* >>>>>> KeyFrames <<<<<< */
